{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 85,
  "lineage": "00a6e95f-753a-2059-c9bc-1207d796ac0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9c7b920a88b393c",
            "arn": "arn:aws:ec2:us-east-1:011528256520:elastic-ip/eipalloc-0a9c7b920a88b393c",
            "association_id": "eipassoc-0a2e3358112c65f7c",
            "domain": "vpc",
            "id": "eipalloc-0a9c7b920a88b393c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d59ce4be53578127",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-54-80-205-168.compute-1.amazonaws.com",
            "public_ip": "54.80.205.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amazon_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e3c4a339a264cc9",
            "arn": "arn:aws:ec2:us-east-1:011528256520:instance/i-08c7ad65f3d427853",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c7ad65f3d427853",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "VEXPENSES-Rodrigo_Ascencao-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ad26471a64bb4365",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.216",
            "public_dns": "ec2-54-210-80-109.compute-1.amazonaws.com",
            "public_ip": "54.210.80.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ffe9e2140416c5a",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08fb46ee566380c44"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079e093796cfcd668",
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-ec2"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fb46ee566380c44"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.main_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528256520:internet-gateway/igw-0b9347b44bf9d71bc",
            "id": "igw-0b9347b44bf9d71bc",
            "owner_id": "011528256520",
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-igw"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-igw"
            },
            "vpc_id": "vpc-0b028e00a8a2bc0e7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9c7b920a88b393c",
            "association_id": "eipassoc-0a2e3358112c65f7c",
            "connectivity_type": "public",
            "id": "nat-04e1a732571a9de3e",
            "network_interface_id": "eni-0d59ce4be53578127",
            "private_ip": "10.0.1.154",
            "public_ip": "54.80.205.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079e093796cfcd668"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06cab6c13582b8c061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04e1a732571a9de3e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cab6c13582b8c06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528256520:route-table/rtb-06cab6c13582b8c06",
            "id": "rtb-06cab6c13582b8c06",
            "owner_id": "011528256520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04e1a732571a9de3e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-private_route_table"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b028e00a8a2bc0e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528256520:route-table/rtb-030a853f00bf9052c",
            "id": "rtb-030a853f00bf9052c",
            "owner_id": "011528256520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9347b44bf9d71bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-route_table"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b028e00a8a2bc0e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d2e581c7193ed14",
            "route_table_id": "rtb-06cab6c13582b8c06",
            "subnet_id": "subnet-00462d3fb08ff68b8"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001b18681624c3fab",
            "route_table_id": "rtb-030a853f00bf9052c",
            "subnet_id": "subnet-079e093796cfcd668"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528256520:security-group/sg-08fb46ee566380c44",
            "description": "Allow SSH from my machine and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fb46ee566380c44",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.158.96.234/32"
                ],
                "description": "Allow SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VEXPENSES-Rodrigo_Ascencao-sg",
            "name_prefix": "",
            "owner_id": "011528256520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-sg"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b028e00a8a2bc0e7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528256520:subnet/subnet-00462d3fb08ff68b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00462d3fb08ff68b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011528256520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-private-subnet"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-private-subnet"
            },
            "vpc_id": "vpc-0b028e00a8a2bc0e7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528256520:subnet/subnet-079e093796cfcd668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079e093796cfcd668",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528256520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-public-subnet"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-public-subnet"
            },
            "vpc_id": "vpc-0b028e00a8a2bc0e7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011528256520:vpc/vpc-0b028e00a8a2bc0e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f556750e43ed459",
            "default_route_table_id": "rtb-01e5e4998a0e035df",
            "default_security_group_id": "sg-02c9ca38a13c47943",
            "dhcp_options_id": "dopt-013205c19f4cf9cc2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b028e00a8a2bc0e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e5e4998a0e035df",
            "owner_id": "011528256520",
            "tags": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-vpc"
            },
            "tags_all": {
              "Name": "VEXPENSES-Rodrigo_Ascencao-vpc"
            }
          }
        }
      ]
    }
  ]
}